--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.8.2",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
