--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.8.2",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-slick": "^0.23.13",
     "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
