--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10"
   },
